--- a/CSharp/VirtoCommerce.Module.Template/Content/help/index.html
+++ b/CSharp/VirtoCommerce.Module.Template/Content/help/index.html
@@ -2,32 +2,27 @@
 <html>
 <head>
     <meta charset='utf-8'>
-
     <link rel="stylesheet" type="text/css" href="stylesheet.css" media="screen">
-
     <title>Getting Started</title>
 </head>
-
 <body>
     <div class="container">
         <div id="header">
             <h1>Getting Started</h1>
             <h2>Virto Commerce Extension Modules</h2>
         </div>
-
         <div id="main_content">
             <div id="lpanel">
                 <h1>Creating a Virto Commerce Module</h1>
-
                 <p>This project enables developers to create a module for Virto Commerce. The solution contains a web project that can be installed on Virto Commerce administration platform.</p>
                 <h2>Run</h2>
-
                 <ol>
                     <li>Compile the solution.</li>
                     <li>Configure platform in accordance to the guide available <a href="https://virtocommerce.com/docs/vc2devguide/deployment/platform-deployment/source-code-getting-started" target="_blank">here</a>.</li>
-                    <li>Run the following command as administrator from the Commerce Manager "~/Modules" directory: 
-                        
-                        <pre>mklink /d $safeprojectname$ {solution-path}/$safeprojectname$</pre></li>
+                    <li>
+                        Run the following command as administrator from the Commerce Manager "~/Modules" directory:
+                        <pre>mklink /d $safeprojectname$ {solution-path}/$safeprojectname$</pre>
+                    </li>
                     <li>Open Commerce Manager and you should see your module under &quot;>&quot; as in screenshot below.</li>
                 </ol>
                 <p>
@@ -35,7 +30,6 @@
                 </p>
                 <h2>Debug</h2>
                 <p>To debug your new module, click debug-&gt;attach to the process and select w3wp.exe process (if you don&#39;t see it, try opening VC platform in the browser and select &quot;show all processes&quot;).</p>
-
             </div>
             <div id="rpanel">
                 <div>
