--- a/CSharp/VirtoCommerce.Module.Template/Content/help/index.html
+++ b/CSharp/VirtoCommerce.Module.Template/Content/help/index.html
@@ -39,7 +39,7 @@
                         <li><a target="_blank" href="https://virtocommerce.com/docs/vc2devguide">Developer documentation</a><br />Detailed documentation and API reference material for building extensions.</li>
                         <li><a target="_blank" href="https://github.com/VirtoCommerce/vc-samples">Extension samples on GitHub</a><br />Use a sample project to kickstart your development.</li>
                         <li><a target="_blank" href="https://gitter.im/VirtoCommerce/vc-community">Extensibility chat room on Gitter</a><br />Meet other extension developers and exchange tips and tricks for extension development.</li>
-                        <li><a target="_blank" href="http://demo.virtocommerce.com/admin/docs/ui/index">API Reference</a><br />Explore Virto Commerce API.</li>
+                        <li><a target="_blank" href="https://admin-demo.virtocommerce.com/docs/ui/index">API Reference</a><br />Explore Virto Commerce API.</li>
                     </ol>
                     <h1>Give us feedback</h1>
                     <ul>
