--- a/CSharp/VirtoCommerce.OrderExModule.Template/Web/Content/help/index.html
+++ b/CSharp/VirtoCommerce.OrderExModule.Template/Web/Content/help/index.html
@@ -21,7 +21,7 @@
                     <li>invoices, based on the orders module.</li>
                 </ul>
                 <p>Extensions are combined because of the close relationship of the modules (orders and cart).</p>
-                <h2>Run</h2>
+                <h2>Installation</h2>
                 <ol>
                     <li>Compile the solution.</li>
                     <li>Configure platform in accordance to the guide available <a href="https://virtocommerce.com/docs/vc2devguide/deployment/platform-deployment/source-code-getting-started" target="_blank">here</a>.</li>
@@ -34,16 +34,17 @@
                 <p>To debug your new module, click debug-&gt;attach to the process and select w3wp.exe process (if you don&#39;t see it, try opening VC platform in the browser and select &quot;show all processes&quot;).</p>
                 <h2>Solution architecture</h2>
                 <p>In the solution, each project has its own responsibilities. Thus, certain types belong to each project, and you can always find the folders corresponding to these types in the corresponding project.</p>
+                <p>The figure below shows a representation of the layers of architecture. Notice that the solid arrows correspond to the compile-time dependencies, and the dashed arrows to the dependencies that exist only at run time. As part of the current architecture, a Web project works with interfaces that are defined in the Core project at compile time, and ideally should not know anything about the implementation types defined in the Data project. But at run time, these types of implementations are necessary to run the application, so they must exist and be tied to the interfaces of the Core project through dependency injection.</p>
                 <p>
                     <img src="arch_diagram.png" />
                 </p>
+                <h3>.Core <small>Business/Application Model</small></h3>
+                <p>The project must contain a business model, services and interfaces. These interfaces should include abstractions for operations that will be performed using infrastructure, such as data access, file system access, network calls, etc. In addition, services or interfaces defined at this level can work with non-object types. that are independent of the user. interface or infrastructure and are defined as simple data transfer objects (DTO).</p>
+                <h3>.Data <small>Data Access Logic</small></h3>
+                <p>The project includes the implementation of data access. Namely, the data access implementation classes (Repositories), any EF Migration objects that have been defined, and EF Entities models. In addition to the data access implementations, the project must contain service implementations that must interact with infrastructure problems. These services must implement the interfaces defined in Core, and therefore the project must have a reference to the Core project.</p>
                 <h3>.Web <small>Presentation Logic and Entry Point</small></h3>
                 <p>The user interface level in an ASP.NET MVC application is the entry point for the application. This project must refer to the Core project, and its types must interact with the data layer strictly through the interfaces defined in Core. Direct creation or static calls for user-level data types are not allowed at the user interface level.</p>
                 <p>The Startup class is responsible for setting up the application and connecting the implementation types to the interfaces, which allows you to correctly inject dependencies at runtime. And to enable dependency injection in ConfigureServices in the Startup.cs file of the user interface project, it refers to data projects.</p>
-                <h3>.Data (.Cart.Data, .Order.Data) <small>Data Access Logic</small></h3>
-                <p>The project includes the implementation of data access. Namely, the data access implementation classes (Repositories), any EF Migration objects that have been defined, and EF Entities models. In addition to the data access implementations, the project must contain service implementations that must interact with infrastructure problems. These services must implement the interfaces defined in Core, and therefore the project must have a reference to the Core project.</p>
-                <h3>.Core <small>Business/Application Model</small></h3>
-                <p>The project must contain a business model, services and interfaces. These interfaces should include abstractions for operations that will be performed using infrastructure, such as data access, file system access, network calls, etc. In addition, services or interfaces defined at this level can work with non-object types. that are independent of the user. interface or infrastructure and are defined as simple data transfer objects (DTO).</p>
                 <h2>Problems and fixs</h2>
                 <p><b>Migrations</b></p>
                 <p>The migration context may become obsolete. In particular, if the state of the database has changed since the generation of the existing migration. Because of this, there will be problems with migration and errors in the integration of the module.</p>
