--- a/CSharp/VirtoCommerce.PriceExModule.Template/Web/Content/help/index.html
+++ b/CSharp/VirtoCommerce.PriceExModule.Template/Web/Content/help/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset='utf-8'>
@@ -48,13 +48,8 @@
                 <p>The migration context may become obsolete. In particular, if the state of the database has changed since the generation of the existing migration. Because of this, there will be problems with migration and errors in the integration of the module.</p>
                 <p>You must recreate the migration or add a new one in order to get the current state of the models. It is also necessary to remove changes to entities that have already been made. Only what we did in the extension should remain.</p>
                 <p>For migration, use the following commands, indicating the type of migration configuration, for multiple migrations in one project: </p>
-                <pre class="indent">Add-Migration {MigrateName} 
-    -ConfigurationTypeName {MigrateConfiguration} 
-    -ConnectionString "Data Source=(local);Initial Catalog=VirtoCommerce2_Samples;
-        Persist Security Info=True;User ID=virto;Password=virto;
-        MultipleActiveResultSets=True;Connect Timeout=420" 
-    -ConnectionProviderName "System.Data.SqlClient"</pre>
-                <p>Where {MigrateName} is the name of the migration, in the current case it is Initial. And the configuration {MigrateConfiguration} is equal to $safeprojectname$.Migrations.Cart.Configuration or $safeprojectname$.Migrations.Order.Configuration.</p>
+                <pre class="indent">Add-Migration {MigrateName} -ConnectionString "Data Source=(local);Initial Catalog=VirtoCommerce2;Persist Security Info=True;User ID=virto;Password=virto;MultipleActiveResultSets=True;Connect Timeout=420" -ConnectionProviderName "System.Data.SqlClient"</pre>
+                <p>Where {MigrateName} is the name of the migration, in the current case it is Initial.</p>
                 <p>Converting existing records from the source table to the extension table is necessary manually. For example: </p>
                 <pre class="indent">Sql("INSERT INTO dbo.{TableNameEx} (Id) SELECT Id FROM dbo.{TableName}")</pre>
                 <p>Where {TableNameEx} is the name of the table with the extension, in the current case CustomerOrderEx. And {TableName} is a table that is expanded, in the current case CustomerOrder.</p>
